# notocjk

./: .gitignore  README.md  changelog.txt  config.sh  customize.sh  install.sh  module.prop  otc2otf.py  pyproject.toml  version.json
.github/workflows/: main.yml
chws_subset/: __init__.py  __main__.py
extra/: changelog.md
fonts/: NotoSansCJK.ttc.md5  md5-generator.sh
system/etc/: fonts.xml
